# confluence-publisher

./: .env.example  .gitignore  README.md  action.yml  confluence-manifest.yaml  pyproject.toml
.github/workflows/: publish-to-confluence.yml
confluence_publisher/: cli.py  confluence_client.py  converter.py  publisher.py
docs/: ARCHITECTURE.md  BRD.md  DECISIONS.md  DELIVERY_PLAN.md  MANIFEST_SPEC.md  ONBOARDING.md  TRD.md
examples/workflows/: pr-preview.yml  publish.yml
test-docs/: hello-world.md
tests/: test_confluence_client.py  test_converter.py  test_publisher.py
