[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pipewell-confluence-publisher"
version = "1.0.1"
description = "Publish Markdown documentation from GitHub to Confluence Cloud or Data Center"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Olumide Ibilaiye", email = "donolu@gmail.com" }]
keywords = ["confluence", "markdown", "documentation", "atlassian", "github-actions"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Documentation",
]

dependencies = [
    "mistletoe>=1.3",
    "requests>=2.31",
    "PyYAML>=6.0",
    "click>=8.1",
    "tenacity>=8.2",
]

[project.urls]
Homepage = "https://github.com/pipewell/confluence-publisher"
Repository = "https://github.com/pipewell/confluence-publisher"
Documentation = "https://github.com/pipewell/confluence-publisher#readme"
Changelog = "https://github.com/pipewell/confluence-publisher/releases"
"Bug Tracker" = "https://github.com/pipewell/confluence-publisher/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "ruff>=0.4",
    "mypy>=1.9",
    "types-PyYAML>=6.0",
    "types-requests>=2.31",
]

[project.scripts]
confluence-publisher = "confluence_publisher.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["confluence_publisher*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
# mistletoe has no type stubs; the renderer class is inherently untyped
module = ["confluence_publisher.converter"]
ignore_errors = true

[[tool.mypy.overrides]]
# publisher and cli have complex Optional[client]/dry_run patterns and Click decorators
module = ["confluence_publisher.publisher", "confluence_publisher.cli"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["mistletoe.*"]
ignore_missing_imports = true
